--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -64,8 +64,11 @@ import { LinkExternalIcon } from "@twilio-paste/icons/cjs/LinkExternalIcon";
         <Heading as="h2" variant="heading20">
           Recent Writing
         </Heading>
-        <Separator orientation="horizontal" verticalSpacing="space50" />
-        <Text as="p">This space is unfortunately blank</Text>
+        <Link href="/writing/scaling_support" passHref>
+          <Anchor>
+            Growing Pains: How We Scaled Our Design System Support
+          </Anchor>
+        </Link>
       </Column>
       <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
         <Heading as="h2" variant="heading20">
