docs(scaling): show edit article

--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -771,7 +771,7 @@ const triggerEmergency = (props) => {
         </Link>, and <Link href="//chexee.me/" passHref>
           <Anchor>Chelsea Otakan</Anchor>
         </Link> for guidance and edits on this article. If you see a typo or an error,
-        please drop a line here.
+        please <Link href="//github.com/aayushpi/dotfyi/blob/master/pages/writing/scaling_support.mdx" passHref><Anchor showExternal>suggest an edit</Anchor></Link>.
       </Text>
     </Box>
   </Column>
