--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -61,14 +61,16 @@ import { LinkExternalIcon } from "@twilio-paste/icons/cjs/LinkExternalIcon";
   <Box marginTop="space100">
     <Grid>
       <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
-        <Heading as="h2" variant="heading20">
-          Recent Writing
-        </Heading>
-        <Link href="/writing/scaling_support" passHref>
-          <Anchor>
-            Growing Pains: How We Scaled Our Design System Support
-          </Anchor>
-        </Link>
+        <Box as="div" marginBottom={["space50", "space50", 0]}>
+          <Heading as="h2" variant="heading20">
+            Recent Writing
+          </Heading>
+          <Link href="/writing/scaling_support" passHref>
+            <Anchor>
+              Growing Pains: How We Scaled Our Design System Support
+            </Anchor>
+          </Link>
+        </Box>
       </Column>
       <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
         <Heading as="h2" variant="heading20">
