add-twitter-discussion

--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -766,19 +766,19 @@ const triggerEmergency = (props) => {
       <Text as="p" fontSize="fontSize20">
         Many thanks to{" "}
         <Link href="//www.jennieyip.design/" passHref>
-          <Anchor>Jennie Yip</Anchor>
+          <Anchor showExternal>Jennie Yip</Anchor>
         </Link>
         , <Link href="//heysarah.li/" passHref>
-          <Anchor>Sarah Li</Anchor>
+          <Anchor showExternal>Sarah Li</Anchor>
         </Link>, and <Link href="//chexee.me/" passHref>
-          <Anchor>Chelsea Otakan</Anchor>
+          <Anchor showExternal>Chelsea Otakan</Anchor>
         </Link> for guidance and edits on this article. If you see a typo or an error,
         please <Link
           href="//github.com/aayushpi/dotfyi/blob/master/pages/writing/scaling_support.mdx"
           passHref
         >
           <Anchor showExternal>suggest an edit</Anchor>
-        </Link>.
+        </Link>. I'd love to hear your thoughts and comments on this <Link href="//twitter.com/aayush/status/1356690446135619585" passHref><Anchor showExternal>Twitter thread</Anchor></Link>
       </Text>
     </Box>
   </Column>
