--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -266,7 +266,7 @@ const triggerEmergency = (props) => {
       This was a good problem to have: customers were buying in to the design
       system at a pace that was greater than anticipated. However, this meant
       that we were increasingly devoting more time to support rather than new
-      development. This put a dent in our shipping velocity but1 more
+      development. This put a dent in our shipping velocity but more
       importantly affected team health: support is hard and often a thankless
       job. To mitigate these problems, we investigated why our support model was
       failing at scale:
